# machines

./: .gitignore  .gitmodules  README.md  ansible.cfg  compose.yaml  pyproject.toml
.scratch/: deploy_ssh_key.yaml  drogon_swarm.yaml  gather_facts.yaml  install_sops.yaml  mount_shrunk_image.yaml  provision_git.yaml
.scratch/catalyst_pi/: README.md  playbook.yaml
.scratch/tasks/: add_to_sudoers.yaml  create_git_repos.yaml  create_sdcard_image.yaml  create_sdcard_image_zstd.yaml  drogon_swarm.yaml  provision_SOPS2.yaml  provision_rpi_outpost.yaml  shrink_sd_card_image.yaml
collections/ansible_collections/catalyst/applications/: README.md  galaxy.yml
collections/ansible_collections/catalyst/development/: galaxy.yml
collections/ansible_collections/community.general-9.3.0.info/: GALAXY.yml
collections/bootstrap_ansible/: alpine.yaml  main.yaml
collections/catalyst/applications/: galaxy.yml
collections/catalyst/development/: README.md  galaxy.yml
collections/catalyst/machines/: galaxy.yml
collections/catalyst_pi/: galaxy.yaml
collections/image_dev/: create_sdcard_image_zstd.yaml
images/rpi5/: Taskfile.yaml
images/rpi5/ansible/: playbook.yaml
inventory/: inventory.yaml  testing.yaml
playbooks/: README.md  add_to_docker_group.yaml  create_workspaces.yaml  hosts.yaml  provision_git.yaml  provision_rpi_outpost.yaml
playbooks/bootstrap_ansible/: darwin.yaml  debian.yaml
scripts/: configure-ssh-user.sh  run_galaxy_playbook.sh
test_machines/: compose.yaml  ubuntu.Dockerfile
testing/: compose.yaml  configure-ssh-user.sh  ubuntu.Dockerfile
(+47 files in other folders)
