[tool.poetry]
name = "machines"
version = "0.1.0"
description = ""
authors = ["TheBranchDriftCatalyst <djdanielsh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^10.3.0"
molecule = "^24.8.0"
molecule-docker = "^2.1.0"
ansible-lint = "<24.7.0"
yamllint = "^1.35.1"
pytest-molecule = "^2.0.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
